2006-03-05  Chris Taylor  <chris@icculus.org>

	* main/inferno.c: create write directory if it doesn't exist
	(didn't work before)

2006-02-26  Chris Taylor  <chris@icculus.org>

	* include/strutil.h, main/bm.c, main/gamepal.c, main/gamesave.c,
	main/movie.c, main/piggy.c, misc/strutil.c:
	move change_filename_ext to strutil.c, rename to (and remove old)
	change_filename_extension, add an assert and make it use strrchr

	* main/gamerend.c: show the death sequence for d2x-gl
	(fix bug #2513)

	* main/gamesave.c: with the editor built, don't make .txm files
	when a level is loaded (only make them when saving levels)

2006-02-25  Chris Taylor  <chris@icculus.org>

	* main/menu.c: complete removal of 7th option in Options menu,
	hopefully fixing bug #2514

	* main/gameseg.c: when breaking a light, allow segment light to
	change by more than F1_0

2006-02-24  Chris Taylor  <chris@icculus.org>

	* main/gauges.c: make sure the correct font is used (whoops)

	* main/newmenu.c: restore the old canvas after showing a menu,
	avoiding potential problems

2005-11-29  Chris Taylor  <chris@icculus.org>

	* main/titles.c: for Descent 1 briefings, look for briefings no
	further than NUM_D1_BRIEFING_SCREENS (fix bug #2270)

2005-11-07  Chris Taylor  <chris@icculus.org>

	* arch/ogl/ogl.c: make super transparent textures have alpha

2005-08-13  Chris Taylor  <chris@icculus.org>

	* main/gauges.c: draw all gauges properly when using the cockpit
	in d2x-gl, including the energy bars when empty

2005-08-07  Chris Taylor  <chris@icculus.org>

	* arch/ogl/ogl.c, main/game.c, main/gamerend.c:
	get the cockpit to show with d2x-gl (actually committed!)

2005-08-06  Chris Taylor  <chris@icculus.org>

	* main/automap.c: must_free_canvas isn't used when
	AUTOMAP_DIRECT_RENDER is defined (whoops)

	* main/inferno.c: print the command line help properly

	* arch/ogl/ogl.c, main/game.c, main/gamerend.c:
	get the cockpit to show with d2x-gl

2005-08-02  Chris Taylor  <chris@icculus.org>
